--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Rent-A-Park</h1>
     <form>
-      Location:<br>
+      Location:
       <input type="text" name="location"></input>
       <select name="radius">
         <option value="1">1mi</option>
@@ -14,8 +14,9 @@
         <option value="2">2mi</option>
         <option value="2.5">2.5mi</option>
       </select>
-      Price:<br>
+      <br><br>Price:
       <input type="text" name="lastname"></input>
+      <br><button>Submit</bottom>
     </form>
   </body>
 </html>
