--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,14 @@
   </head>
   <body>
     <h1>Rent-A-Park</h1>
+    <div id="header">
+        <div id="login-header">
+          <!-- <a class="navbutton" href="/login">login/register</a> -->
+          <form action="/login">
+            <input type="image" id="sign_in_button" src="../images/btn_google_signin_light_normal_web.png" />
+          </form>
+        </div>
+    </div>
     <form>
       Location:
       <input type="text" name="location"></input>
