--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="welcome.css">
+    <link rel="stylesheet" type="text/css" href="../styles/welcome.css">
   </head>
   <body>
     <h1>Rent-A-Park</h1>
