--- a/styles/welcome.css
+++ b/styles/welcome.css
@@ -1,7 +1,152 @@
 #sign_in_button {
-  /* height: auto;
+  height: auto;
   width: auto;
   padding-top: 20px;
-  border: None; */
+  border: None;
   background-color: yellow;
+}
+
+#header {
+  font-family: helvetica;
+  border-style: solid;
+  border-width: 2px;
+  border-color: black;
+  background-color: #e6e6e6;
+  width: 800px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.container {
+  max-width: 1500px;
+  padding-left: .5rem;
+  padding-right: .5rem;
+  height: 100vh;
+  /* margin:auto; */
+}
+.below {
+  background-color: #cab5acdb;
+  height: 550px;
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 1), 0 10px 40px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* #login-header {
+  display: flex;
+  justify-content: center;
+} */
+
+/* .navbutton {
+  padding-top: 15px;
+  font-size: 14pt;
+  color: black;
+  font-family: helvetica;
+  font-weight: lighter;
+  padding: 14px 17px;
+} */
+
+#outer-box {
+  max-width: 400px;
+  height: 200px;
+  border-style: solid;
+  border-color: black;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  background-color: #cbc6c5c9;
+  justify-content: space-between;
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .5), 0 10px 40px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+#slogan {
+  text-align: center;
+  /* alternative fonts;
+  font-family: times, Times, georgia, serif;
+  font-weight: 10;*/
+  font-family: helvetica;
+  font-weight: lighter;
+  font-size: 24pt;
+  opacity: 10;
+
+
+}
+
+/* .fullscreen_image {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100vh;
+  min-width: 10%;
+  min-height: 10%;
+}
+#bofa {
+  min-width: 10%;
+  min-height: 10%;
+} */
+
+body {
+  background-size: cover;
+  margin: 0px;
+  /* overflow attempts start here
+  overflow: scroll;
+  overflow-x: hidden;
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden; */
+}
+
+/* .footer {
+  flex-shrink: 0;
+  color: white;
+  border-top-style: solid;
+  border-color: white;
+  font-family: helvetica;
+  font-weight: lighter;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #e6e6e6;
+} */
+
+h1 {
+  font-size: 36pt;
+  letter-spacing: 5px;
+  text-align: center;
+  padding-left: 20px;
+  font-weight: lighter;
+  font-family: helvetica;
+  color: black;
+  padding-top: 20px;
+}
+
+#padding {
+  height: 185px;
+  width: auto;
+}
+
+
+h2 {
+  font-size: 28pt;
+  letter-spacing: 1px;
+  text-align: center;
+  padding-left: 20px;
+  font-weight: lighter;
+  font-family: helvetica;
+  color: black;
+  padding-top: 20px;
+}
+p {
+  margin:100px;
+  font-size: 18pt;
+  text-align: center;
+  font-weight: lighter;
+  /* font-family: helvetica; */
+  font-family: sans-serif;
+
 }
