--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/welcome.css">
   </head>
   <body>
-    <h1>Rent-A-Park</h1>
+    <h1>Parc</h1>
     <div id="header">
         <div id="login-header">
           <!-- <a class="navbutton" href="/login">login/register</a> -->
