--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,7 +23,7 @@
         <option value="2.5">2.5mi</option>
       </select>
       <br><br>Price:
-      <input type="text" name="lastname"></input>
+      <input type="text" name="price"></input>
       <br><button>Submit</bottom>
     </form>
   </body>
